--- a/wiki/ListofKnownBugs.wiki
+++ b/wiki/ListofKnownBugs.wiki
@@ -8,6 +8,6 @@ This list can be edited by all project members, and should contain all known bug
 = Details =
 
 Major Bugs:
-  * ~~strike~~Admit Defeat Bug~~strike~~
+  * ~~Admit Defeat Bug~~
   * Ban Bug
   * Xael / Luci Ammo bug
