More wiki changes...

--- a/wiki/CurrentDifferences.wiki
+++ b/wiki/CurrentDifferences.wiki
@@ -1,4 +1,4 @@
-*Differences between Tremx-KoR*
+*Differences between Tremx-KoR* <br />
 Major Changes are in *BOLD*
 ===Commands===
 [http://i299.photobucket.com/albums/mm308/Aaron5367-trem/feature-1.jpg]
