--- a/wiki/Update_1_Differences.wiki
+++ b/wiki/Update_1_Differences.wiki
@@ -1,4 +1,4 @@
-===Differences from Update 1.0 (r225) to Update 1.1 (r260)===
+===Differences from Update 1.0 (r225) to Update 1.1 (r268)===
 
 ==Bug Fixes==
 Possible booster bug fixed.(r225)<br />
@@ -9,7 +9,8 @@ Custom vote executing last vote string fixed. (r226)<br />
 Suicide should now cancel when you die. (r235)<br />
 Adv. Rant acid now does large radial damage along with regular impact damage. (r222 & r234)<br />
 Booster boosts every five seconds, regardless if player is currently boosted. (r225)<br />
-Another Xael/Luci bug precaution. (r259)
+Another Xael/Luci bug precaution. (r259)<br />
+Hovels with Grangers in them that die should work now. (r268)<br />
 
 ==Graphical Improvements==
 All human textures are slightly darker. (Fox_One (r230 & r232)<br />
@@ -26,8 +27,10 @@ Forcefield shrinks when you hit Q (+button7) now. (r253)<br />
 Compressed tons of textures to jpg and removed several bulky xcf and tga files. (r249 & r241)<br />
 Forcefield has new UI info to reflect changes. (r254) <br />
 Various other UI bug fixes and enhancements (r252 & r260)<br />
+Lots of UI menus were updated to reflect changes in the game. (r267)
 
 ==Gameplay Changes==
 Adv. Rant's acid is strong again, to counter Xael. (r222 & r234)<br />
 Countdown stops you from joining now. (r236)<br />
-Health system is now in float, allowing for a more precise regeneration system. (r259)
+Health system is now in float, allowing for a more precise regeneration system. (r259)<br />
+Adv. Rants now have a healing rate of 10 hp/s and cost 9 evos instead of 11. (r255 & r256)<br />
