Edited wiki page through web user interface.

--- a/wiki/Todolist1.wiki
+++ b/wiki/Todolist1.wiki
@@ -9,3 +9,10 @@ Add the new health bar border from Trepdius.<br />
 Try to add the status icon changes from MGdev.<br />
 Add the KoRx logo to the esc ingame menu.<br />
 Add emoticons from MGdev.<br />
+Attempt to add the new UI from Trepidus.<br />
+
+==Gameplay Fixes==
+Switch the Mara's zap over to MGdev's.<br />
+
+==Command Additions==
+Try adding the /mystats command. <br />
